Removed unused deps, add route for loading JS/CSS files

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
   </head>
   <body>
-    <div class="elm-container"/>
+    <div id="elm-container"></div>
+    <script src="js/app.js"></script>
   </body>
 </html>
