--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="elm-container"></div>
-    <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
