Make clear division between frontend and backend, use elm-live instead of brunch for building Elm code

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -6,5 +6,6 @@
   <body>
     <div id="elm-container"></div>
     <script src="js/app.js"></script>
+    <script>Elm.Main.embed(document.getElementById("elm-container"));</script>
   </body>
 </html>
