--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
   </head>
   <body>
-    <div id="elm-container"></div>
+    <div id="elm-container" style="height: 100%;"></div>
     <script src="js/app.js"></script>
     <script>Elm.Main.embed(document.getElementById("elm-container"));</script>
   </body>
