--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <script src="https://www.chartjs.org/dist/2.7.2/Chart.js" type="text/javascript"></script>
   </head>
   <body>
-    <div id="elm-container" style="height: 100%;"></div>
+    <script src="js/chart_helpers.js"></script>
     <script src="js/app.js"></script>
-    <script>Elm.Main.embed(document.getElementById("elm-container"));</script>
+    <script>
+      let app = Elm.Main.fullscreen()
+      app.ports.drawChart.subscribe(drawChart)
+    </script>
   </body>
 </html>
