--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js" type="text/javascript"></script>
     <script src="https://www.chartjs.org/dist/2.7.2/Chart.js" type="text/javascript"></script>
   </head>
   <body>
