Build Elm using webpack, split up frontend + backend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,11 +6,6 @@
     <script src="https://www.chartjs.org/dist/2.7.2/Chart.js" type="text/javascript"></script>
   </head>
   <body>
-    <script src="js/chart_helpers.js"></script>
-    <script src="js/app.js"></script>
-    <script>
-      let app = Elm.Main.fullscreen()
-      app.ports.drawChart.subscribe(drawChart)
-    </script>
+    <script src="/app.js"></script>
   </body>
 </html>
